--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -20,13 +20,18 @@
     redis_version: 6
     postgres_version: 14
     solr_version: 8
-    maw_cert_volume: maw-certs
     env_file_dir: /home/svc_www_maw
   changed_when: false
   delegate_to: localhost
 
+- name: Include maw_volumes.yml
+  ansible.builtin.include_tasks: maw_volumes.yml
+
 - name: Include maw_pod.yml
   ansible.builtin.include_tasks: maw_pod.yml
+
+- name: Include maw_systemd.yml
+  ansible.builtin.include_tasks: maw_systemd.yml
 
 - name: "Reset SSH username to {{ orig_ansible_user }}"
   ansible.builtin.set_fact:
