--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -27,6 +27,9 @@
 - name: Include maw_volumes.yml
   ansible.builtin.include_tasks: maw_volumes.yml
 
+- name: Initialize environment
+  ansible.builtin.include_tasks: maw_init.yml
+
 - name: Include maw_pod.yml
   ansible.builtin.include_tasks: maw_pod.yml
 
