expose container ports

--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -3,6 +3,9 @@
   containers.podman.podman_pod:
     name: "{{ mawus_podname }}"
     state: started
+    publish:
+      - 8080:80
+      - 8443:443
 
 # redis
 - name: create redis container
