--- a/roles/mikeandwan_us/tasks/maw_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_init.yml
@@ -6,6 +6,8 @@
     name: maw-certs
     image: "docker.io/aerisg222/maw-certs:latest"
     state: started
+    interactive: yes
     rm: yes
+    tty: yes
     volume:
       - "{{ maw_cert_volume.volume.Name }}:/certs:rw,z"
