--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -21,6 +21,24 @@ mawus_config:
     password: "{{ vault_password_vmtest_svc_www_maw }}"
     subuid: 300000-365536
     subgid: 300000-365536
+  is_prod: no
+  sql_username: svc_www_maw
+  sql_password: "{{ vault_password_vmtest_sql_svc_www_maw }}"
+  sql_postgress_password: "{{ vault_password_vmtest_sql_postgres }}"
+  www_client_secret: "{{ vault_client_secret_www }}"
+  google_plus_client_id: "{{ vault_google_plus_client_id }}"
+  google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
+  twitter_client_id: "{{ vault_twitter_client_id }}"
+  twitter_client_secret: "{{ vault_twitter_client_secret }}"
+  microsoft_client_id: "{{ vault_microsoft_client_id }}"
+  microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
+  github_client_id: "{{ vault_github_client_id }}"
+  github_client_secret: "{{ vault_github_client_secret }}"
+  google_api_key: "{{ vault_google_api_key }}"
+  www_auth_client_id: "{{ vault_www_auth_client_id }}"
+  www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
+  google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
+  google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 
 # subuid / subgid hopefully coming to user module eventually
 # https://github.com/ansible/ansible/issues/68199
