rename  env file as this is used for more than just postgres backup

--- a/roles/mikeandwan_us/tasks/maw_env_files.yml
+++ b/roles/mikeandwan_us/tasks/maw_env_files.yml
@@ -13,6 +13,6 @@
   loop:
     - maw-api.env
     - maw-auth.env
-    - maw-postgres-backup.env
+    - maw-postgres.env
     - maw-reverse-geocode.env
     - maw-www.env
