--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -46,6 +46,7 @@
     name: maw-postgres
     image: "docker.io/postgres:{{ postgres_version }}-alpine"
     state: started
+    env_file: "{{ env_file_dir }}/maw-postgres.env"
     volume:
       - "{{ postgres_volume.volume.Name }}:/var/lib/postgresql/data:rw,z"
     label:
