make volume naming consistent

--- a/roles/mikeandwan_us/tasks/maw_volumes.yml
+++ b/roles/mikeandwan_us/tasks/maw_volumes.yml
@@ -19,7 +19,7 @@
 
 - name: create solr volume
   containers.podman.podman_volume:
-    name: "solr-{{ solr_version }}"
+    name: "maw-solr-{{ solr_version }}"
     state: present
   register: solr_volume
 
