limit data show for users in loops

--- a/roles/service_accounts/tasks/main.yml
+++ b/roles/service_accounts/tasks/main.yml
@@ -7,4 +7,6 @@
     password: "{{ item.password | password_hash('sha512') }}"
     update_password: always
     state: present
+  loop_control:
+    label: "{{ item.username }}"
   loop: "{{ service_accounts if service_accounts is iterable else [] }}"
