--- a/roles/podman/tasks/main.yml
+++ b/roles/podman/tasks/main.yml
@@ -16,10 +16,14 @@
       - --add-subgids
       - "{{ item.subgid }}"
       - "{{ item.username }}"
+  loop_control:
+    label: "{{ item.username }}"
   loop: "{{ podman_users if podman_users is iterable else [] }}"
 
 - name: Enable linger for rootless containers
   become: yes
   ansible.builtin.command:
     cmd: loginctl enable-linger {{ item.username }}
+  loop_control:
+    label: "{{ item.username }}"
   loop: "{{ podman_users if podman_users is iterable else [] }}"
