--- a/roles/mikeandwan_us/tasks/maw_init.yml
+++ b/roles/mikeandwan_us/tasks/maw_init.yml
@@ -11,3 +11,11 @@
     tty: yes
     volume:
       - "{{ maw_cert_volume.volume.Name }}:/certs:rw,z"
+
+- name: wait for cert initialization to complete
+  containers.podman.podman_container_info:
+    name: maw-certs
+  register: cert_container
+  delay: 10
+  retries: 24
+  until: cert_container.containers | length == 0
