wait for containers to start - also introduce environment enum rather than multiple booleans

--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -28,7 +28,7 @@
   ansible.builtin.set_fact:
     services: "{{ services + services_prod }}"
     timers: "{{ timers + timers_prod }}"
-  when: maw_is_prod
+  when: maw_env == 'prod'
 
 - name: Prepare systemd service and timer files
   ansible.builtin.template:
