--- a/roles/mikeandwan_us/defaults/main.yml
+++ b/roles/mikeandwan_us/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
-maw_is_prod: no
-maw_is_stage: no
+maw_env: stage
 host_assets_dir: /srv/www/website_assets
 host_assets_dir_images: "{{ host_assets_dir }}/images"
 host_assets_dir_movies: "{{ host_assets_dir }}/movies"
