--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -18,9 +18,22 @@
     maw_gateway_volumes:
       - "{{ maw_cert_volume.volume.Name }}:/certs:ro,z"
       - "{{ host_assets_dir }}:/assets:ro"
-  when: not maw_is_prod
+  when: maw_env == 'dev'
 
-- name: define vars (prod or stage)
+- name: define vars (stage)
+  ansible.builtin.set_fact:
+    image_photos: docker.io/aerisg222/maw-photos:latest
+    image_files: docker.io/aerisg222/maw-files:latest
+    image_auth: docker.io/aerisg222/maw-auth:latest
+    image_api: docker.io/aerisg222/maw-api:latest
+    image_www: docker.io/aerisg222/maw-www:latest
+    image_gateway: docker.io/aerisg222/maw-gateway-dev:latest
+    maw_gateway_volumes:
+      - "{{ maw_cert_volume.volume.Name }}:/certs:ro,z"
+      - "{{ host_assets_dir }}:/assets:ro"
+  when: maw_env == 'stage'
+
+- name: define vars (prod)
   ansible.builtin.set_fact:
     image_photos: docker.io/aerisg222/maw-photos:latest
     image_files: docker.io/aerisg222/maw-files:latest
@@ -28,19 +41,12 @@
     image_api: docker.io/aerisg222/maw-api:latest
     image_www: docker.io/aerisg222/maw-www:latest
     image_gateway: docker.io/aerisg222/maw-gateway:latest
-  when: maw_is_prod or maw_is_stage
-
-- name: define vars (prod)
-  ansible.builtin.set_fact:
-    maw_gateway_volumes_prod:
+    maw_gateway_volumes:
+      - "{{ maw_cert_volume.volume.Name }}:/certs:ro,z"
+      - "{{ host_assets_dir }}:/assets:ro"
       - "{{ certbot_validation_volume.volume.Name }}:/var/www/certbot:ro,z"
       - "{{ certbot_certs_volume.volume.Name }}:/etc/letsencrypt:ro,z"
-  when: maw_is_prod
-
-- name: append production specific gateway volumes (prod)
-  ansible.builtin.set_fact:
-    maw_gateway_volumes: "{{ maw_gateway_volumes + maw_gateway_volumes_prod }}"
-  when: maw_is_prod
+  when: maw_env == 'prod'
 
 - name: create containers
   containers.podman.podman_containers:
@@ -125,6 +131,7 @@
           - "{{ maw_cert_volume.volume.Name }}:/certs:ro,z"
         label:
           io.containers.autoupdate: image
+
       - name: maw-photos
         pod: "{{ mawus_podname }}"
         image: "{{ image_photos }}"
@@ -143,3 +150,20 @@
           - label=disable
         label:
           io.containers.autoupdate: image
+  register: maw_containers
+
+- name: wait for containers to start
+  containers.podman.podman_container_info:
+    name:
+      - maw-redis
+      - maw-postgres
+      - maw-solr
+      - maw-auth
+      - maw-api
+      - maw-www
+      - maw-files
+      - maw-photos
+      - maw-gateway
+  delay: 10
+  retries: 12
+  until: (maw_containers.containers | length == 9)
