--- a/roles/mikeandwan_us/tasks/port_mapping.yml
+++ b/roles/mikeandwan_us/tasks/port_mapping.yml
@@ -1,4 +1,21 @@
 ---
+# https://github.com/containers/podman/blob/main/rootless.md
+- name: permit rootless users to listen on low ports
+  become: yes
+  ansible.posix.sysctl:
+    name: net.ipv4.ip_unprivileged_port_start
+    value: 80
+    state: present
+
+
+
+
+
+
+#
+# if the above does not work, we can re-enable the rules below
+#
+
 # todo: is this needed?
 #- name: configure sysctl
 #  become: yes
@@ -7,32 +24,32 @@
 #    value: 1
 #    state: present
 
-- name: Set ports to forward
-  ansible.builtin.set_fact:
-    redirect_ports:
-      - port: 80
-        toport: 8080
-      - port: 443
-        toport: 8443
+# - name: Set ports to forward
+#   ansible.builtin.set_fact:
+#     redirect_ports:
+#       - port: 80
+#         toport: 8080
+#       - port: 443
+#         toport: 8443
 
-- name: Enable masquerading
-  become: yes
-  ansible.posix.firewalld:
-    masquerade: yes
-    immediate: yes
-    permanent: yes
-    state: enabled
-    zone: FedoraServer
+# - name: Enable masquerading
+#   become: yes
+#   ansible.posix.firewalld:
+#     masquerade: yes
+#     immediate: yes
+#     permanent: yes
+#     state: enabled
+#     zone: FedoraServer
 
-- name: HTTP(S) Forwarding
-  become: yes
-  ansible.posix.firewalld:
-    rich_rule: "rule family=ipv4 forward-port port={{ item.port }} protocol=tcp to-port={{ item.toport }}"
-    immediate: yes
-    permanent: yes
-    state: enabled
-    zone: FedoraServer
-  loop: "{{ redirect_ports }}"
+# - name: HTTP(S) Forwarding
+#   become: yes
+#   ansible.posix.firewalld:
+#     rich_rule: "rule family=ipv4 forward-port port={{ item.port }} protocol=tcp to-port={{ item.toport }}"
+#     immediate: yes
+#     permanent: yes
+#     state: enabled
+#     zone: FedoraServer
+#   loop: "{{ redirect_ports }}"
 
 # todo: is this needed?
 #- name: Forward ports for localhost
