initialize the database from backups if needed

--- a/roles/mikeandwan_us/tasks/maw_pod.yml
+++ b/roles/mikeandwan_us/tasks/maw_pod.yml
@@ -91,6 +91,9 @@
   vars:
     - container_name: maw-postgres
 
+- name: include maw_postgres_init.yml
+  ansible.builtin.include_tasks: maw_postgres_init.yml
+
 - name: maw-solr container
   containers.podman.podman_container:
     name: maw-solr
