--- a/host_vars/vmtest.yml
+++ b/host_vars/vmtest.yml
@@ -25,7 +25,9 @@ mawus_config:
   is_prod: no
   sql_username: svc_www_maw
   sql_password: "{{ vault_password_vmtest_sql_svc_www_maw }}"
-  sql_postgress_password: "{{ vault_password_vmtest_sql_postgres }}"
+  sql_postgres_password: "{{ vault_password_vmtest_sql_postgres }}"
+  sql_idsrv_password: "{{ vault_password_vmtest_sql_idsrv }}"
+  sql_solr_password: "{{ vault_password_vmtest_sql_solr }}"
   www_client_secret: "{{ vault_client_secret_www }}"
   google_plus_client_id: "{{ vault_google_plus_client_id }}"
   google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
@@ -40,6 +42,11 @@ mawus_config:
   www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
   google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
   google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
+
+pg_backup_host_dir: /home/mmorano/db_backups
+pg_backup_roles: roles.sql
+pg_backup_idsrv: idsrv.20220307.dump
+pg_backup_www: maw_website.20220307.dump
 
 # subuid / subgid hopefully coming to user module eventually
 # https://github.com/ansible/ansible/issues/68199
